Fixed a bug in scatterplot and barchart: when clicking a data object at the last view, the display shifts to the current view (one less than the next view), for only the case of snapping to view, the next view can go out of bounds so the display is not shifted

--- a/d3 Prototyping/CSS/piechartStyles.css
+++ b/d3 Prototyping/CSS/piechartStyles.css
@@ -47,3 +47,8 @@ body {
     stroke: #c7c7c7;
 }
 
+/*The anchor along the interaction path */
+#anchor{
+    fill: none;
+    stroke:#c7c7c7;
+}
